[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LabelName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -106.0
margin_right = -108.0
margin_bottom = -86.0
text = "Name:"
valign = 1

[node name="TextEditName" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -106.0
margin_right = 144.0
margin_bottom = -86.0

[node name="LabelAddress" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -76.0
margin_right = -58.0
margin_bottom = -56.0
text = "Server Address:"
valign = 1

[node name="TextEditAddress" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -76.0
margin_right = 144.0
margin_bottom = -56.0

[node name="LabelPort" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -46.0
margin_right = -108.0
margin_bottom = -26.0
text = "Port:"
valign = 1

[node name="TextEditPort" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -46.0
margin_right = 144.0
margin_bottom = -26.0

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 10.0
text = "Connect"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
